# queryer

./: .gitignore  Cargo.toml
daa-viewer/src/: index.html  index3.html  main.js
daa-viewer/src-tauri/: Cargo.toml  tauri.conf.json
daa-viewer/src-tauri/src/: lib.rs  main.rs
examples/: covid.rs
queryer/: owid-covid-latest.csv
queryer/examples/: covid.rs
queryer/src/: dialect.rs
queryer_js/: Cargo.toml  README.md  package.json
queryer_js/npm/darwin-x64/: README.md  package.json
queryer_js/src/: lib.rs
queryer_py/: Cargo.toml  README.md
queryer_py/src/: lib.rs
src/: covert.rs  fetcher.rs  lib.rs
