[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "dialect"

[[example]]
name = "covid"

[dependencies]
anyhow = "1" # 错误处理，其实对于库我们应该用 thiserror，但这里简单起见就不节外生枝了
#async-trait = "0.1" # 允许 trait 里有 async fn
sqlparser = "0.10" # SQL 解析器
polars = { version = "0.25.1",features = ["json", "lazy"] } # DataFrame 库 源码中是0.15版本在 macos 14.3.1版本上执行会报错，调整到此版本没问题，相关api发生变化
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] } # 我们的老朋友 HTTP 客户端
tokio = { version = "1", features = ["fs"]} # 我们的老朋友异步库，我们这里需要异步文件处理
tracing = "0.1"
chrono = "0.4.39"
rand = "0.8.5" # 日志处理
plotters = "0.3.7"

[dev-dependencies]
tracing-subscriber = "0.2" # 日志处理
tokio = { version = "1", features = ["full"]} # 在 example 下我们需要更多的 tokio feature
